--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ results/Molniya_all_pert/molniya.txt
 results/Molniya_all_pert/orbElems_Molniya_all_pert.png
 *.png
 results/Molniya_all_pert/prop_data_Molniya_all_pert.txt
+accuracy_NavTOP.m~
