--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ results/Molniya_all_pert/orbElems_Molniya_all_pert.png
 *.png
 results/Molniya_all_pert/prop_data_Molniya_all_pert.txt
 accuracy_NavTOP.m~
+Accuracy Tests/AT1/ECI_pos_difference_wSTK.fig
+Accuracy Tests/AT1/orb_param_difference_wSTK.fig
+Accuracy Tests/AT2/ECI_pos_difference_wSTK.fig
+Accuracy Tests/AT2/ECI_vel_difference_wSTK.fig
+Accuracy Tests/AT2/orb_param_difference_wSTK.fig
